--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -1,6 +1,6 @@
 
 .modal-custom {
-    max-width: 900px; /* Adjust width as needed */
+    max-width: 1000px; /* Adjust width as needed */
     width: 100%;
     height: 400px;
   }
@@ -14,6 +14,24 @@
     flex-wrap: wrap; */
     gap: 8px;
   }
+
+ 
+.modal-footer {
+  display: flex;
+  justify-content: space-between; /* Space between the buttons */
+  align-items: center; /* Align items vertically center */
+  padding: 1rem; /* Add some padding for spacing */
+  
+}
+  
+
+.modal-header{
+  display: flex;
+  justify-content: space-between; /* Space between the buttons */
+  align-items: center; /* Align items vertically center */
+  padding: 1rem; /* Add some padding for spacing */
+  
+}
   
   .form-row {
     display: grid;
