--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -86,14 +86,27 @@ h4{
   text-align: center;
   vertical-align: middle;
   border:1px solid #EAEAEA;
+  /* overflow: hidden; */
+}
+
+.cell span {
+  position: absolute;
+  top: 50%; /* Vertically center the text */
+  left: 50%; /* Horizontally center the text */
+  transform: translate(-50%, -50%); /* Adjust positioning to center */
+  white-space: nowrap; /* Prevent text from wrapping */
+  overflow: hidden; /* Hide overflowed text */
+  text-overflow: ellipsis; /* Add ellipsis for overflowing text */
 }
 
 .cell.reserved {
   position: relative;
-  background-color: rgb(199, 97, 97);
+  background-color: rgb(90, 90, 207);
   color: white;
   border: none;
+  border-top: #333;
 }
+
 
 /* .cell.selected {
   background-color: #007bff;
@@ -101,15 +114,15 @@ h4{
 } */
 
 .selected {
-  border: 2px solid #58a5be; /* Blue border for selected cells */
+  border: 2px solid #7aec1c; /* Blue border for selected cells */
 }
 
 .cell.selected-start {
-  border-left: 2px solid #58a5be;
+  border-left: 2px solid #7aec1c;
 }
 
 .cell.selected-end {
-  border-right: 2px solid #58a5be;
+  border-right: 2px solid #7aec1c;
 }
 
 .cell.available.arrival-day {
@@ -118,16 +131,10 @@ h4{
 }
 
 .cell.selected {
-  background-color: #58a5be !important; /* Blue background for selected cells */
+  background-color: #7aec1c !important; /* Blue background for selected cells */
   /* border: 2px solid #007bff !important;  */
   border-style: dashed;
 }
-
-/* .cell.reserved {
-  position: relative;
-  display: inline-block;
-  border: none;
-} */
 
 .legends {
   width: 20%;
