--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -5,19 +5,19 @@
       <div class="legends container">
         <div class="row legend">
           <div class="legend-item">
-            <div class="legend-box" style="background-color: rgb(199, 97, 97);"></div>
+            <div class="legend-box" style="background-color: rgb(90, 90, 207);"></div>
             <span class="legend-box-span">Booked periods</span>
           </div>
           <div class="legend-item">
             <div class="legend-box" style="background-color: #c3e6cb;"></div>
-            <span class="legend-box-span">Arrival available periods</span>
+            <span class="legend-box-span">Arrival available Days</span>
           </div>
           <div class="legend-item">
             <div class="legend-box" style="background-color: #EAEAEA;"></div>
-            <span class="legend-box-span">Blocked non-arrival periods</span>
+            <span class="legend-box-span">Blocked non-arrival Days</span>
           </div>
           <div class="legend-item">
-            <div class="legend-box" style="background-color: #58a5be;"></div>
+            <div class="legend-box" style="background-color: #7aec1c;"></div>
             <span class="legend-box-span">Selected periods</span>
           </div>
         </div>
@@ -52,8 +52,11 @@
               
               [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, day) ? 'auto' : 'none' }"
             >
-            
+            <span *ngIf="hasReservation(room.roomId,day)">
+              {{ getCustomerName(room.roomId,day)}}
+            </span>
             </div>
+            
           </ng-container>
         </div>
       </div>
@@ -62,4 +65,5 @@
   </div>
 </div>
 <!-- <button (click)="logSelectedRange()">Log Selected Range</button> -->
+
 
