--- a/src/app/modal/modal.component.css
+++ b/src/app/modal/modal.component.css
@@ -24,6 +24,11 @@
   
 }
   
+.customer{
+  display: flex;
+  /* justify-content: space-between; */
+  justify-content: space-around;
+}
 
 .modal-header{
   display: flex;
