--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -59,6 +59,11 @@
       </div>
       <div *ngSwitchCase="2">
         <!-- Customer Form Content -->
+         <div class="customer">
+          <button class="btn btn-info">New customer</button>
+          <button class="btn btn-info">Existing customer</button>
+         </div>
+         
         <form [formGroup]="customerForm">
           <!-- Customer Form Fields -->
           <div class="row mb-3">
@@ -68,12 +73,10 @@
               <!-- <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly> -->
             </div>
           </div>
-          
           <div class="row mb-3">
             <div class="col-md-4">
               <label for="firstName" class="form-label">First Name</label>
               <input type="text" id="firstName" class="form-control" formControlName="firstName">
-              
             </div>
             <div class="col-md-4">
               <label for="middleName" class="form-label">Middle Name</label>
@@ -109,7 +112,6 @@
                 <small *ngIf="customerForm.get('age')?.errors?.['min']" class="text-danger">Age must be greater than 0.</small>
               </div>
             </div>
-            
             <div class="col-md-5">
               <label for="mobileNumber" class="form-label">Mobile Number</label>
               <input 
@@ -156,7 +158,6 @@
               </div>
             </div>
           </div>
-          
           <div class="row mb-3">
             <div class="col-md-4">
               <label for="city" class="form-label">City</label>
@@ -196,13 +197,53 @@
           </div>
           <div class="mb-3">
             <label for="paymentMode" class="form-label">Payment Mode</label>
-            <select id="paymentMode" class="form-select" formControlName="paymentMode">
+            <select id="paymentMode" class="form-select" formControlName="paymentMode" (change)="onPaymentModeChange($event)">
               <option value="netBanking">Cash</option>
               <option value="creditCard">Credit Card</option>
               <option value="debitCard">Debit Card</option>
               <option value="upi">UPI</option>
             </select>
           </div>
+
+          <div *ngIf="isCardPayment()">
+            <div class="mb-3">
+              <label for="cardNumber" class="form-label">Card Number</label>
+              <input type="text" id="cardNumber" class="form-control" formControlName="cardNumber">
+            </div>
+            <div class="mb-3">
+              <label for="cardHolderName" class="form-label">Card Holder Name</label>
+              <input type="text" id="cardHolderName" class="form-control" formControlName="cardHolderName">
+            </div>
+            <div class="mb-3">
+              <label for="expiryDate" class="form-label">Expiry Date</label>
+              <input type="text" id="expiryDate" class="form-control" formControlName="expiryDate" placeholder="MM/YY">
+            </div>
+            <div class="mb-3">
+              <label for="cvv" class="form-label">CVV</label>
+              <input type="text" id="cvv" class="form-control" formControlName="cvv">
+            </div>
+          </div>
+      
+          <!-- Net Banking Inputs -->
+          <div *ngIf="isNetBanking()">
+            <div class="mb-3">
+              <label for="bankName" class="form-label">Bank Name</label>
+              <input type="text" id="bankName" class="form-control" formControlName="bankName">
+            </div>
+            <div class="mb-3">
+              <label for="accountNumber" class="form-label">Account Number</label>
+              <input type="text" id="accountNumber" class="form-control" formControlName="accountNumber">
+            </div>
+          </div>
+
+          <div *ngIf="isUPI()">
+            <div class="mb-3">
+              <label for="upi" class="form-label">UPI</label>
+              <input type="text" id="upi" class="form-control" formControlName="upi">
+            </div>
+           
+          </div>
+
           <div class="mb-3">
             <label for="totalAmount" class="form-label">Total Amount</label>
             <input type="text" id="totalAmount" class="form-control" formControlName="totalAmount" readonly>
