--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -59,133 +59,147 @@
       </div>
       <div *ngSwitchCase="2">
         <!-- Customer Form Content -->
-         <div class="customer">
-          <button class="btn btn-info">New customer</button>
-          <button class="btn btn-info">Existing customer</button>
-         </div>
-         
-        <form [formGroup]="customerForm">
-          <!-- Customer Form Fields -->
-          <div class="row mb-3">
-            <div class="col-12">
-              <label for="customerId" class="form-label">Customer ID</label>
-              <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
-              <!-- <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly> -->
-            </div>
+        <div *ngIf="showButtons" class="customer">
+          <button class="btn btn-info" (click)="newCustomer()">New customer</button>
+          <button class="btn btn-info" (click)="existingCustomer()">Existing customer</button>
+        </div>
+        <div class="row" *ngIf="this.showCustomerIdInput && isExistingCustomer">
+          <div class="col-8">
+            <input type="number" #customerIdInput placeholder="Enter Customer ID" class="form-control mt-2">
           </div>
-          <div class="row mb-3">
-            <div class="col-md-4">
-              <label for="firstName" class="form-label">First Name</label>
-              <input type="text" id="firstName" class="form-control" formControlName="firstName">
-            </div>
-            <div class="col-md-4">
-              <label for="middleName" class="form-label">Middle Name</label>
-              <input type="text" id="middleName" class="form-control" formControlName="middleName">
-            </div>
-            <div class="col-md-4">
-              <label for="lastName" class="form-label">Last Name</label>
-              <input type="text" id="lastName" class="form-control" formControlName="lastName">
-            </div>
-            <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
-              <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
-              <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
-            </div>
-            <div *ngIf="customerForm.get('middleName')?.invalid">
-              <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
-            </div>
-            <div *ngIf="customerForm.get('lastName')?.invalid">
-              <small *ngIf="customerForm.get('lastName')?.errors" class="text-danger">Last name must have alhpabets only.</small>
-            </div>
+          <div class="col-4 search-btn">
+            <button type="button" class="btn btn-primary" (click)="searchCustomer(customerIdInput)">Search</button>
           </div>
-          <div class="row mb-3">
-            <div class="col-md-5">
-              <label for="birthDate" class="form-label">Birth Date</label>
-              <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
-              <div *ngIf="customerForm.get('birthDate')?.invalid && customerForm.get('birthDate')?.touched">
-                <small *ngIf="customerForm.get('birthDate')?.errors" class="text-danger">Birth Date is required.</small>
-              </div>
-            </div>
-            <div class="col-md-2">
-              <label for="age" class="form-label">Age</label>
-              <input type="number" id="age" class="form-control" formControlName="age" readonly>
-              <div *ngIf="customerForm.get('age')?.invalid">
-                <small *ngIf="customerForm.get('age')?.errors?.['min']" class="text-danger">Age must be greater than 0.</small>
-              </div>
-            </div>
-            <div class="col-md-5">
-              <label for="mobileNumber" class="form-label">Mobile Number</label>
-              <input 
-                type="text" 
-                id="mobileNumber" 
-                class="form-control" 
-                formControlName="mobileNumber"
-              >
-              <div *ngIf="customerForm.get('mobileNumber')?.touched">
-                <div *ngIf="customerForm.get('mobileNumber')?.hasError('required')">
-                  <small class="text-danger">Mobile Number is required.</small>
-                </div>
-                <div *ngIf="customerForm.get('mobileNumber')?.hasError('pattern')">
-                  <small class="text-danger">Invalid Mobile Number format.</small>
+        </div>
+        
+        <div *ngIf="errorMessage" class="alert alert-danger mt-2">
+          {{ errorMessage }}
+        </div>
+         <!-- <input type="number" #customerIdInput placeholder="Enter Customer ID" class="form-control mt-2"> -->
+         <div *ngIf="showCustomerForm">
+            <form [formGroup]="customerForm">
+              <!-- Customer Form Fields -->
+              <div class="row mb-3">
+                <div class="col-12">
+                  <label for="customerId" class="form-label">Customer ID</label>
+                  <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
+                  <!-- <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly> -->
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="row mb-3">
-            <div class="col-md-4">
-              <label for="address" class="form-label">Address</label>
-              <input type="text" id="address" class="form-control" formControlName="address">
-              <div *ngIf="customerForm.get('address')?.invalid && customerForm.get('address')?.touched">
-                <small *ngIf="customerForm.get('address')?.errors" class="text-danger">Address is required.</small>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="district" class="form-label">District</label>
-              <input type="text" id="district" class="form-control" formControlName="district">
-              <div *ngIf="customerForm.get('district')?.invalid && customerForm.get('district')?.touched">
-                <small *ngIf="customerForm.get('district')?.errors" class="text-danger">District is required.</small>
-              </div>
-            </div>
-            <div class="col-md-4">
-              <label for="pincode" class="form-label">Pincode</label>
-              <input type="text" id="pincode" class="form-control" formControlName="pincode" maxlength="6" >
-              <div *ngIf="customerForm.get('pincode')?.touched">
-                <div *ngIf="customerForm.get('pincode')?.hasError('required')">
-                  <small class="text-danger">Pincode is required.</small>
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="firstName" class="form-label">First Name</label>
+                  <input type="text" id="firstName" class="form-control" formControlName="firstName">
                 </div>
-                <div *ngIf="customerForm.get('pincode')?.hasError('pattern')">
-                  <small class="text-danger">Pincode must be 6 digits.</small>
+                <div class="col-md-4">
+                  <label for="middleName" class="form-label">Middle Name</label>
+                  <input type="text" id="middleName" class="form-control" formControlName="middleName">
+                </div>
+                <div class="col-md-4">
+                  <label for="lastName" class="form-label">Last Name</label>
+                  <input type="text" id="lastName" class="form-control" formControlName="lastName">
+                </div>
+                <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
+                  <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
+                  <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
+                </div>
+                <div *ngIf="customerForm.get('middleName')?.invalid">
+                  <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
+                </div>
+                <div *ngIf="customerForm.get('lastName')?.invalid">
+                  <small *ngIf="customerForm.get('lastName')?.errors" class="text-danger">Last name must have alhpabets only.</small>
                 </div>
               </div>
-            </div>
-          </div>
-          <div class="row mb-3">
-            <div class="col-md-4">
-              <label for="city" class="form-label">City</label>
-              <input type="text" id="city" class="form-control" formControlName="city">
-              <div *ngIf="customerForm.get('city')?.invalid && customerForm.get('city')?.touched">
-                <small *ngIf="customerForm.get('city')?.errors" class="text-danger">City is required.</small>
+              <div class="row mb-3" *ngIf="!isExistingCustomer">
+                <div class="col-md-5">
+                  <label for="birthDate" class="form-label">Birth Date</label>
+                  <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
+                  <div *ngIf="customerForm.get('birthDate')?.invalid && customerForm.get('birthDate')?.touched">
+                    <small *ngIf="customerForm.get('birthDate')?.errors" class="text-danger">Birth Date is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <label for="age" class="form-label">Age</label>
+                  <input type="number" id="age" class="form-control" formControlName="age" readonly>
+                  <div *ngIf="customerForm.get('age')?.invalid">
+                    <small *ngIf="customerForm.get('age')?.errors?.['min']" class="text-danger">Age must be greater than 0.</small>
+                  </div>
+                </div>
+                <div class="col-md-5">
+                  <label for="mobileNumber" class="form-label">Mobile Number</label>
+                  <input 
+                    type="text" 
+                    id="mobileNumber" 
+                    class="form-control" 
+                    formControlName="mobileNumber"
+                  >
+                  <div *ngIf="customerForm.get('mobileNumber')?.touched">
+                    <div *ngIf="customerForm.get('mobileNumber')?.hasError('required')">
+                      <small class="text-danger">Mobile Number is required.</small>
+                    </div>
+                    <div *ngIf="customerForm.get('mobileNumber')?.hasError('pattern')">
+                      <small class="text-danger">Invalid Mobile Number format.</small>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <label for="state" class="form-label">State</label>
-              <input type="text" id="state" class="form-control" formControlName="state">
-              <div *ngIf="customerForm.get('state')?.invalid && customerForm.get('state')?.touched">
-                <small *ngIf="customerForm.get('state')?.errors" class="text-danger">State is required.</small>
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="address" class="form-label">Address</label>
+                  <input type="text" id="address" class="form-control" formControlName="address">
+                  <div *ngIf="customerForm.get('address')?.invalid && customerForm.get('address')?.touched">
+                    <small *ngIf="customerForm.get('address')?.errors" class="text-danger">Address is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="district" class="form-label">District</label>
+                  <input type="text" id="district" class="form-control" formControlName="district">
+                  <div *ngIf="customerForm.get('district')?.invalid && customerForm.get('district')?.touched">
+                    <small *ngIf="customerForm.get('district')?.errors" class="text-danger">District is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="pincode" class="form-label">Pincode</label>
+                  <input type="text" id="pincode" class="form-control" formControlName="pincode" maxlength="6" >
+                  <div *ngIf="customerForm.get('pincode')?.touched">
+                    <div *ngIf="customerForm.get('pincode')?.hasError('required')">
+                      <small class="text-danger">Pincode is required.</small>
+                    </div>
+                    <div *ngIf="customerForm.get('pincode')?.hasError('pattern')">
+                      <small class="text-danger">Pincode must be 6 digits.</small>
+                    </div>
+                  </div>
+                </div>
               </div>
-            </div>
-            <div class="col-md-4">
-              <label for="country" class="form-label">Country</label>
-              <input type="text" id="country" class="form-control" formControlName="country">
-              <div *ngIf="customerForm.get('country')?.invalid && customerForm.get('country')?.touched">
-                <small *ngIf="customerForm.get('country')?.errors" class="text-danger">Country is required.</small>
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="city" class="form-label">City</label>
+                  <input type="text" id="city" class="form-control" formControlName="city">
+                  <div *ngIf="customerForm.get('city')?.invalid && customerForm.get('city')?.touched">
+                    <small *ngIf="customerForm.get('city')?.errors" class="text-danger">City is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="state" class="form-label">State</label>
+                  <input type="text" id="state" class="form-control" formControlName="state">
+                  <div *ngIf="customerForm.get('state')?.invalid && customerForm.get('state')?.touched">
+                    <small *ngIf="customerForm.get('state')?.errors" class="text-danger">State is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="country" class="form-label">Country</label>
+                  <input type="text" id="country" class="form-control" formControlName="country">
+                  <div *ngIf="customerForm.get('country')?.invalid && customerForm.get('country')?.touched">
+                    <small *ngIf="customerForm.get('country')?.errors" class="text-danger">Country is required.</small>
+                  </div>
+                </div>
               </div>
-            </div>
+              <div class="modal-footer">
+                <button type="button" class="btn btn-primary" (click)="previousStep()">Previous</button>
+              <button type="button" class="btn btn-success" (click)="nextStep()">Next</button>
+              </div>
+            </form>
           </div>
-          <div class="modal-footer">
-            <button type="button" class="btn btn-primary" (click)="previousStep()">Previous</button>
-          <button type="button" class="btn btn-success" (click)="nextStep()">Next</button>
-          </div>
-        </form>
       </div>
       <div *ngSwitchCase="3">
         <!-- Payment Form Content -->
