--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -10,7 +10,7 @@
           <div class="row">
             <div class="form-group col-md-2 mb-3">
               <label for="location" class="form-label">Location</label>
-              <select id="location" formControlName="location" class="form-control" (change)="onLocationChange($event)">
+              <select id="location" formControlName="location" class="form-control" >
                 <option value="">Select Location</option>
                 <option *ngFor="let loc of locations" [value]="loc">{{ loc }}</option>
               </select>
@@ -32,19 +32,19 @@
               <input id="numberOfPersons" type="number" formControlName="numberOfPersons" class="form-control">
             </div>
             <div class="form-group col-md-2 mb-3">
-              <label for="maxPrice" class="form-label">Price</label>
+              <label for="maxPrice" class="form-label">Price per day per person</label>
               <input type="range" class="form-range" min="0" max="4000" id="maxPrice" formControlName="maxPrice">
               <output id="priceOutput">{{ filterForm.get('maxPrice')?.value }}</output>
             </div>
           
             <div class="form-group col-md-1 mb-3">
               <label for="minStay" class="form-label">Min Stay</label>
-              <input id="minStay" type="number" formControlName="minStay" class="form-control">
+              <input id="minStay" type="number" formControlName="minStay" class="form-control" placeholder="Enter a value">
             </div>
 
             <div class="form-group col-md-1 mb-3">
               <label for="maxStay" class="form-label">Max Stay</label>
-              <input id="maxStay" type="number" formControlName="maxStay" class="form-control">
+              <input id="maxStay" type="number" formControlName="maxStay" class="form-control" placeholder="Enter a value">
             </div>
           </div>
 
@@ -53,7 +53,6 @@
           </div>
         </form>
 
-       
       </div>
       <div *ngIf="filteredRooms.length === 0" class="mt-3">
         <p class="text-muted text-center">No rooms match the selected criteria.</p>
@@ -66,7 +65,7 @@
 
     <div class="container my-2" *ngIf="filteredRooms.length > 0">
       <!-- <h2 class="text-center mb-4" style="color: slategrey;">Filtered Rooms</h2> -->
-      <table class="table table-striped table-bordered table-hover">
+      <!-- <table class="table table-striped table-bordered table-hover">
         <thead class="thead-dark">
           <tr>
             <th>Room ID</th>
@@ -93,11 +92,11 @@
             <td>{{ room.minStay }}</td>
             <td>{{ room.maxStay }}</td>
             <td>
-              <button class="btn btn-outline-primary" (click)="openBookingModal(room)">Book Now</button>
+              <button class="btn btn-outline-primary" (click)="openBookingModal(room)" [disabled]="!isFilterApplied">Book Now</button>
             </td>
           </tr>
         </tbody>
-      </table>
+      </table> -->
     </div>
     
     <!-- Room Cards Column -->
@@ -112,11 +111,13 @@
               <p class="card-text">
                 <strong>Location:</strong> {{ room.locationName }}<br>
                 <strong>Price per day:</strong> {{ room.pricePerDayPerPerson | currency }}<br>
-                <strong>Guest Capacity:</strong> {{ room.guestCapacity }}
+                <strong>Guest Capacity:</strong> {{ room.guestCapacity }}<br>
+                <strong>Min stay:</strong> {{ room.minStay }}<br>
+                <strong>Max stay:</strong> {{ room.maxStay }}
               </p>
             </div>
             <div class="card-footer text-center bg-transparent border-0">
-              <button class="btn btn-outline-primary" (click)="openBookingModal(room)">Book Now</button>
+              <button class="btn btn-outline-primary" (click)="openBookingModal(room)" >Book Now</button>
             </div>
           </div>
         </div>
@@ -131,7 +132,7 @@
   <div class="modal-dialog">
     <div class="modal-content">
       <div class="modal-header">
-        <h5 class="modal-title" id="bookingModalLabel" style="color: darkcyan;">Booking Details</h5>
+        <h5 class="modal-title" id="bookingModalLabel" style="color: darkcyan; font-size: 1.5rem;">Booking Details</h5>
         <button type="button" class="btn-close" (click)="closeBookingModal()"></button>
       </div>
       <div class="modal-body">
@@ -161,7 +162,7 @@
               </div>
               <div class="form-group">
                 <label class="form-label">Reservation date</label>
-                <p class="form-text">{{ bookingForm.get('reservationDate')?.value | date:'short' }}</p>
+                <p class="form-text">{{ bookingForm.get('reservationDate')?.value | date }}</p>
               </div>
               <div class="form-group">
                 <label class="form-label">Guests</label>
@@ -182,72 +183,12 @@
         <!-- Step 2: Customer Information -->
         <div *ngIf="currentStep === 2">
           <form [formGroup]="customerForm" class="container">
-            <!-- <div class="row mb-3">
-              <div class="col-12">
-                <label for="customerId" class="form-label">Customer ID</label>
-                <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly>
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" id="firstName" class="form-control" formControlName="firstName">
-              </div>
-              <div class="col-md-4">
-                <label for="middleName" class="form-label">Middle Name</label>
-                <input type="text" id="middleName" class="form-control" formControlName="middleName">
-              </div>
-              <div class="col-md-4">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" id="lastName" class="form-control" formControlName="lastName">
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-5">
-                <label for="birthDate" class="form-label">Birth Date</label>
-                <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
-              </div>
-              <div class="col-md-2">
-                <label for="age" class="form-label">Age</label>
-                <input type="number" id="age" class="form-control" formControlName="age" readonly>
-              </div>
-              <div class="col-md-5">
-                <label for="mobileNumber" class="form-label">Mobile Number</label>
-                <input type="text" id="mobileNumber" class="form-control" formControlName="mobileNumber">
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="address" class="form-label">Address</label>
-                <input type="text" id="address" class="form-control" formControlName="address">
-              </div>
-              <div class="col-md-4">
-                <label for="district" class="form-label">District</label>
-                <input type="text" id="district" class="form-control" formControlName="district">
-              </div>
-              <div class="col-md-4">
-                <label for="pincode" class="form-label">Pincode</label>
-                <input type="text" id="pincode" class="form-control" formControlName="pincode">
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="city" class="form-label">City</label>
-                <input type="text" id="city" class="form-control" formControlName="city">
-              </div>
-              <div class="col-md-4">
-                <label for="state" class="form-label">State</label>
-                <input type="text" id="state" class="form-control" formControlName="state">
-              </div>
-              <div class="col-md-4">
-                <label for="country" class="form-label">Country</label>
-                <input type="text" id="country" class="form-control" formControlName="country">
-              </div>
-            </div> -->
+         
             <div class="row mb-3">
               <div class="col-12">
                 <label for="customerId" class="form-label">Customer ID</label>
-                <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly>
+                <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
+                <!-- <input type="text" id="customerId" class="form-control" formControlName="customerId" readonly> -->
               </div>
             </div>
             
@@ -255,6 +196,7 @@
               <div class="col-md-4">
                 <label for="firstName" class="form-label">First Name</label>
                 <input type="text" id="firstName" class="form-control" formControlName="firstName">
+                
               </div>
               <div class="col-md-4">
                 <label for="middleName" class="form-label">Middle Name</label>
@@ -264,9 +206,9 @@
                 <label for="lastName" class="form-label">Last Name</label>
                 <input type="text" id="lastName" class="form-control" formControlName="lastName">
               </div>
-              <div *ngIf="customerForm.get('firstName')?.invalid && customerForm.get('firstName')?.touched">
-                <small *ngIf="customerForm.get('firstName')?.errors" class="text-danger">First name is required.</small>
-                <small *ngIf="customerForm.get('firstName')?.errors" class="text-danger"> First name must be at least 2 characters long.</small>
+              <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
+                <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
+                <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
               </div>
               <div *ngIf="customerForm.get('middleName')?.invalid">
                 <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
@@ -377,6 +319,7 @@
             <div class="mb-3">
               <label for="paymentMode" class="form-label">Payment Mode</label>
               <select id="paymentMode" class="form-select" formControlName="paymentMode">
+                <option value="creditCard">Cash</option>
                 <option value="creditCard">Credit Card</option>
                 <option value="debitCard">Debit Card</option>
                 <option value="netBanking">Net Banking</option>
@@ -398,7 +341,7 @@
           </form>
         </div>
         
-        <!-- Step 4: Download PDF -->
+        <!-- Step 4: Acknowledgement/ Invoice section -->
         <div *ngIf="currentStep === 4">
           <div class="text-center">
             <h1>Your booking details have been successfully submitted.</h1>
