--- a/src/app/room-availability-gantt/room-availability-gantt.component.html
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.html
@@ -1,9 +1,27 @@
-
 <div class="container-fluid">
   <div class="row">
     <div class="col-md-12">
-      <!-- Navigation Buttons and Current Month Display -->
-      <div class="current-month row align-items-center justify-content-center" >
+      <div class="legends container">
+        <div class="row legend">
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: rgb(90, 90, 207);"></div>
+            <span class="legend-box-span">Booked periods</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #c3e6cb;"></div>
+            <span class="legend-box-span">Arrival available Days</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #EAEAEA;"></div>
+            <span class="legend-box-span">Blocked non-arrival Days</span>
+          </div>
+          <div class="legend-item">
+            <div class="legend-box" style="background-color: #7aec1c;"></div>
+            <span class="legend-box-span">Selected periods</span>
+          </div>
+        </div>
+      </div>
+      <div class="current-month row align-items-center justify-content-center">
         <div class="col-md-3 text-center">
           <button (click)="changeMonth(-1)" class="btn btn-primary">‹</button>
         </div>
@@ -14,9 +32,8 @@
           <button (click)="changeMonth(1)" class="btn btn-primary">›</button>
         </div>
       </div>
-      
+
       <div class="chart-container">
-        <!-- Dynamically set grid-template-columns based on days.length -->
         <div class="chart" [style.grid-template-columns]="'repeat(' + (days.length + 1) + ', 1fr)'">
           <div class="day-header">Room</div>
           <div *ngFor="let day of days" [ngClass]="{ 'day-header': true, 'weekend': isWeekend(day) }">
@@ -25,16 +42,17 @@
           </div>
           <ng-container *ngFor="let room of rooms">
             <div class="room-name">Room {{ room.roomId }}</div>
-            <div *ngFor="let day of days" 
+            <div *ngFor="let day of days"
               [ngClass]="getCellClass(room.roomId, day)"
               (mousedown)="onMouseDown(room.roomId, day, $event)"
               (mouseover)="onMouseOver(room.roomId, day, $event)"
               (mouseup)="onMouseUp($event)"
-              (click)="onCellClick(room.roomId, day)"
               class="cell" 
-              [attr.title]="getTooltipContent(room.roomId, day)"
               [ngStyle]="{ 'pointer-events': isCellClickable(room.roomId, day) ? 'auto' : 'none' }"
             >
+              <span *ngIf="hasReservation(room.roomId,day)" >
+                {{ getCustomerName(room.roomId, day) }}
+              </span>
             </div>
           </ng-container>
         </div>
@@ -42,4 +60,3 @@
     </div>
   </div>
 </div>
-<button (click)="logSelectedRange()">Log Selected Range</button>
