changes for night calculation in filter form

--- a/src/app/booking-reservation/booking-reservation.component.html
+++ b/src/app/booking-reservation/booking-reservation.component.html
@@ -10,6 +10,7 @@
       <th>Customer ID</th>
       <th>Arrival Date</th>
       <th>Departure Date</th>
+      <!-- <th>No. of Days</th> -->
       <th>Reservation Date</th>
       <th>Status</th>
       <th>Total Price</th>
