--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -39,7 +39,7 @@
             </div>
             <div class="form-group">
               <label class="form-label">Guests</label>
-              <input type="text" id="totalNumberOfGuests" class="form-control" formControlName="totalNumberOfGuests">
+              <input type="number" id="totalNumberOfGuests" class="form-control" formControlName="totalNumberOfGuests">
             </div>
             <div class="form-group">
               <label class="form-label">Price per person</label>
