--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -212,10 +212,11 @@
           <div class="mb-3">
             <label for="paymentMode" class="form-label">Payment Mode</label>
             <select id="paymentMode" class="form-select" formControlName="paymentMode" (change)="onPaymentModeChange($event)">
-              <option value="netBanking">Cash</option>
-              <option value="creditCard">Credit Card</option>
-              <option value="debitCard">Debit Card</option>
-              <option value="upi">UPI</option>
+              <option value="Cash">Cash</option>
+                <option value="creditCard">Credit Card</option>
+                <option value="debitCard">Debit Card</option>
+                <option value="netBanking">Net Banking</option>
+                <option value="upi">UPI</option>
             </select>
           </div>
 
