--- a/src/app/filter/filter.component.html
+++ b/src/app/filter/filter.component.html
@@ -168,6 +168,10 @@
                 <label class="form-label">Guests</label>
                 <p class="form-text">{{ bookingForm.get('totalNumberOfGuests')?.value }}</p>
               </div>
+              <!-- <div class="form-group">
+                <label class="form-label">Guests</label>
+                <input type="number" id="totalNumberOfGuests" class="form-control" formControlName="totalNumberOfGuests">
+              </div> -->
               <div class="form-group">
                 <label class="form-label">Price per person</label>
                 <p class="form-text">{{ bookingForm.get('pricePerDayPerPerson')?.value | currency }}</p>
@@ -182,131 +186,148 @@
         
         
         <div *ngIf="currentStep === 2">
-          <form [formGroup]="customerForm" class="container">
-         
-            <div class="row mb-3">
-              <div class="col-12">
-                <label for="customerId" class="form-label">Customer ID</label>
-                <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
-               
-              </div>
+          <div *ngIf="showButtons" class="customer">
+            <button class="btn btn-info" (click)="newCustomer()">New customer</button>
+            <button class="btn btn-info" (click)="existingCustomer()">Existing customer</button>
+          </div>
+          <div class="row" *ngIf="this.showCustomerIdInput && isExistingCustomer">
+            <div class="col-8">
+              <input type="number" #customerIdInput placeholder="Enter Customer ID" class="form-control mt-2">
             </div>
-            
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="firstName" class="form-label">First Name</label>
-                <input type="text" id="firstName" class="form-control" formControlName="firstName">
+            <div class="col-4 search-btn">
+              <button type="button" class="btn btn-primary" (click)="searchCustomer(customerIdInput)">Search</button>
+            </div>
+          </div>
+          
+          <div *ngIf="errorMessage" class="alert alert-danger mt-2">
+            {{ errorMessage }}
+          </div>
+          <div *ngIf="showCustomerForm">
+            <form [formGroup]="customerForm" class="container">
+              <div class="row mb-3">
+                <div class="col-12">
+                  <label for="customerId" class="form-label">Customer ID</label>
+                  <p class="form-text">{{ customerForm.get('customerId')?.value }}</p>
+                </div>
+              </div>
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="firstName" class="form-label">First Name</label>
+                  <input type="text" id="firstName" class="form-control" formControlName="firstName">
+                  
+                </div>
+                <div class="col-md-4">
+                  <label for="middleName" class="form-label">Middle Name</label>
+                  <input type="text" id="middleName" class="form-control" formControlName="middleName">
+                </div>
+                <div class="col-md-4">
+                  <label for="lastName" class="form-label">Last Name</label>
+                  <input type="text" id="lastName" class="form-control" formControlName="lastName">
+                </div>
+                <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
+                  <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
+                  <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
+                </div>
+                <div *ngIf="customerForm.get('middleName')?.invalid">
+                  <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
+                </div>
+                <div *ngIf="customerForm.get('lastName')?.invalid">
+                  <small *ngIf="customerForm.get('lastName')?.errors" class="text-danger">Last name must have alhpabets only.</small>
+                </div>
+              </div>
+              <div class="row mb-3" *ngIf="!isExistingCustomer">
+                <div class="col-md-5" >
+                  <label for="birthDate" class="form-label">Birth Date</label>
+                  <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
+                  <div *ngIf="customerForm.get('birthDate')?.invalid && customerForm.get('birthDate')?.touched">
+                    <small *ngIf="customerForm.get('birthDate')?.errors" class="text-danger">Birth Date is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-2">
+                  <label for="age" class="form-label">Age</label>
+                  <input type="number" id="age" class="form-control" formControlName="age" readonly>
+                  <div *ngIf="customerForm.get('age')?.invalid">
+                    <small *ngIf="customerForm.get('age')?.errors?.['min']" class="text-danger">Age must be greater than 0.</small>
+                  </div>
+                </div>
+                
+                <div class="col-md-5">
+                  <label for="mobileNumber" class="form-label">Mobile Number</label>
+                  <input 
+                    type="text" 
+                    id="mobileNumber" 
+                    class="form-control" 
+                    formControlName="mobileNumber"
+                  >
+                  <div *ngIf="customerForm.get('mobileNumber')?.touched">
+                    <div *ngIf="customerForm.get('mobileNumber')?.hasError('required')">
+                      <small class="text-danger">Mobile Number is required.</small>
+                    </div>
+                    <div *ngIf="customerForm.get('mobileNumber')?.hasError('pattern')">
+                      <small class="text-danger">Invalid Mobile Number format.</small>
+                    </div>
+                  </div>
+                </div>
+              </div>
+              
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="address" class="form-label">Address</label>
+                  <input type="text" id="address" class="form-control" formControlName="address">
+                  <div *ngIf="customerForm.get('address')?.invalid && customerForm.get('address')?.touched">
+                    <small *ngIf="customerForm.get('address')?.errors" class="text-danger">Address is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="district" class="form-label">District</label>
+                  <input type="text" id="district" class="form-control" formControlName="district">
+                  <div *ngIf="customerForm.get('district')?.invalid && customerForm.get('district')?.touched">
+                    <small *ngIf="customerForm.get('district')?.errors" class="text-danger">District is required.</small>
+                  </div>
+                </div>
+                <div class="col-md-4">
+                  <label for="pincode" class="form-label">Pincode</label>
+                  <input type="text" id="pincode" class="form-control" formControlName="pincode" maxlength="6" >
+                  <div *ngIf="customerForm.get('pincode')?.touched">
+                    <div *ngIf="customerForm.get('pincode')?.hasError('required')">
+                      <small class="text-danger">Pincode is required.</small>
+                    </div>
+                    <div *ngIf="customerForm.get('pincode')?.hasError('pattern')">
+                      <small class="text-danger">Pincode must be 6 digits.</small>
+                    </div>
+                  </div>
+                </div>
                 
               </div>
-              <div class="col-md-4">
-                <label for="middleName" class="form-label">Middle Name</label>
-                <input type="text" id="middleName" class="form-control" formControlName="middleName">
-              </div>
-              <div class="col-md-4">
-                <label for="lastName" class="form-label">Last Name</label>
-                <input type="text" id="lastName" class="form-control" formControlName="lastName">
-              </div>
-              <div *ngIf="customerForm.get('firstName')?.touched || customerForm.get('firstName')?.dirty">
-                <small *ngIf="customerForm.get('firstName')?.hasError('required')" class="text-danger">First name is required.</small>
-                <small *ngIf="customerForm.get('firstName')?.hasError('minlength')" class="text-danger">First name must be at least 2 characters long.</small>
-              </div>
-              <div *ngIf="customerForm.get('middleName')?.invalid">
-                <small *ngIf="customerForm.get('middleName')?.errors" class="text-danger">Middle name must have alhpabets only.</small>
-              </div>
-              <div *ngIf="customerForm.get('lastName')?.invalid">
-                <small *ngIf="customerForm.get('lastName')?.errors" class="text-danger">Last name must have alhpabets only.</small>
-              </div>
-            </div>
-            <div class="row mb-3">
-              <div class="col-md-5">
-                <label for="birthDate" class="form-label">Birth Date</label>
-                <input type="date" id="birthDate" class="form-control" formControlName="birthDate" (change)="onBirthDateChange()">
-                <div *ngIf="customerForm.get('birthDate')?.invalid && customerForm.get('birthDate')?.touched">
-                  <small *ngIf="customerForm.get('birthDate')?.errors" class="text-danger">Birth Date is required.</small>
-                </div>
-              </div>
-              <div class="col-md-2">
-                <label for="age" class="form-label">Age</label>
-                <input type="number" id="age" class="form-control" formControlName="age" readonly>
-                <div *ngIf="customerForm.get('age')?.invalid">
-                  <small *ngIf="customerForm.get('age')?.errors?.['min']" class="text-danger">Age must be greater than 0.</small>
-                </div>
-              </div>
               
-              <div class="col-md-5">
-                <label for="mobileNumber" class="form-label">Mobile Number</label>
-                <input 
-                  type="text" 
-                  id="mobileNumber" 
-                  class="form-control" 
-                  formControlName="mobileNumber"
-                >
-                <div *ngIf="customerForm.get('mobileNumber')?.touched">
-                  <div *ngIf="customerForm.get('mobileNumber')?.hasError('required')">
-                    <small class="text-danger">Mobile Number is required.</small>
-                  </div>
-                  <div *ngIf="customerForm.get('mobileNumber')?.hasError('pattern')">
-                    <small class="text-danger">Invalid Mobile Number format.</small>
+              <div class="row mb-3">
+                <div class="col-md-4">
+                  <label for="city" class="form-label">City</label>
+                  <input type="text" id="city" class="form-control" formControlName="city">
+                  <div *ngIf="customerForm.get('city')?.invalid && customerForm.get('city')?.touched">
+                    <small *ngIf="customerForm.get('city')?.errors" class="text-danger">City is required.</small>
                   </div>
                 </div>
-              </div>
-            </div>
-            
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="address" class="form-label">Address</label>
-                <input type="text" id="address" class="form-control" formControlName="address">
-                <div *ngIf="customerForm.get('address')?.invalid && customerForm.get('address')?.touched">
-                  <small *ngIf="customerForm.get('address')?.errors" class="text-danger">Address is required.</small>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="district" class="form-label">District</label>
-                <input type="text" id="district" class="form-control" formControlName="district">
-                <div *ngIf="customerForm.get('district')?.invalid && customerForm.get('district')?.touched">
-                  <small *ngIf="customerForm.get('district')?.errors" class="text-danger">District is required.</small>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="pincode" class="form-label">Pincode</label>
-                <input type="text" id="pincode" class="form-control" formControlName="pincode" maxlength="6" >
-                <div *ngIf="customerForm.get('pincode')?.touched">
-                  <div *ngIf="customerForm.get('pincode')?.hasError('required')">
-                    <small class="text-danger">Pincode is required.</small>
+                <div class="col-md-4">
+                  <label for="state" class="form-label">State</label>
+                  <input type="text" id="state" class="form-control" formControlName="state">
+                  <div *ngIf="customerForm.get('state')?.invalid && customerForm.get('state')?.touched">
+                    <small *ngIf="customerForm.get('state')?.errors" class="text-danger">State is required.</small>
                   </div>
-                  <div *ngIf="customerForm.get('pincode')?.hasError('pattern')">
-                    <small class="text-danger">Pincode must be 6 digits.</small>
+                </div>
+                <div class="col-md-4">
+                  <label for="country" class="form-label">Country</label>
+                  <input type="text" id="country" class="form-control" formControlName="country">
+                  <div *ngIf="customerForm.get('country')?.invalid && customerForm.get('country')?.touched">
+                    <small *ngIf="customerForm.get('country')?.errors" class="text-danger">Country is required.</small>
                   </div>
                 </div>
               </div>
               
-            </div>
-            
-            <div class="row mb-3">
-              <div class="col-md-4">
-                <label for="city" class="form-label">City</label>
-                <input type="text" id="city" class="form-control" formControlName="city">
-                <div *ngIf="customerForm.get('city')?.invalid && customerForm.get('city')?.touched">
-                  <small *ngIf="customerForm.get('city')?.errors" class="text-danger">City is required.</small>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="state" class="form-label">State</label>
-                <input type="text" id="state" class="form-control" formControlName="state">
-                <div *ngIf="customerForm.get('state')?.invalid && customerForm.get('state')?.touched">
-                  <small *ngIf="customerForm.get('state')?.errors" class="text-danger">State is required.</small>
-                </div>
-              </div>
-              <div class="col-md-4">
-                <label for="country" class="form-label">Country</label>
-                <input type="text" id="country" class="form-control" formControlName="country">
-                <div *ngIf="customerForm.get('country')?.invalid && customerForm.get('country')?.touched">
-                  <small *ngIf="customerForm.get('country')?.errors" class="text-danger">Country is required.</small>
-                </div>
-              </div>
-            </div>
-            
-          </form>
+            </form>
+
+          </div>
+          
         </div>
         
         <div *ngIf="currentStep === 3">
@@ -317,14 +338,53 @@
             </div>
             <div class="mb-3">
               <label for="paymentMode" class="form-label">Payment Mode</label>
-              <select id="paymentMode" class="form-select" formControlName="paymentMode">
-                <option value="creditCard">Cash</option>
+              <select id="paymentMode" class="form-select" formControlName="paymentMode" (change)="onPaymentModeChange($event)">
+                <option value="Cash">Cash</option>
                 <option value="creditCard">Credit Card</option>
                 <option value="debitCard">Debit Card</option>
                 <option value="netBanking">Net Banking</option>
                 <option value="upi">UPI</option>
               </select>
             </div>
+            <div *ngIf="isCardPayment()">
+              <div class="mb-3">
+                <label for="cardNumber" class="form-label">Card Number</label>
+                <input type="text" id="cardNumber" class="form-control" formControlName="cardNumber">
+              </div>
+              <div class="mb-3">
+                <label for="cardHolderName" class="form-label">Card Holder Name</label>
+                <input type="text" id="cardHolderName" class="form-control" formControlName="cardHolderName">
+              </div>
+              <div class="mb-3">
+                <label for="expiryDate" class="form-label">Expiry Date</label>
+                <input type="text" id="expiryDate" class="form-control" formControlName="expiryDate" placeholder="MM/YY">
+              </div>
+              <div class="mb-3">
+                <label for="cvv" class="form-label">CVV</label>
+                <input type="text" id="cvv" class="form-control" formControlName="cvv">
+              </div>
+            </div>
+        
+            <!-- Net Banking Inputs -->
+            <div *ngIf="isNetBanking()">
+              <div class="mb-3">
+                <label for="bankName" class="form-label">Bank Name</label>
+                <input type="text" id="bankName" class="form-control" formControlName="bankName">
+              </div>
+              <div class="mb-3">
+                <label for="accountNumber" class="form-label">Account Number</label>
+                <input type="text" id="accountNumber" class="form-control" formControlName="accountNumber">
+              </div>
+            </div>
+  
+            <div *ngIf="isUPI()">
+              <div class="mb-3">
+                <label for="upi" class="form-label">UPI</label>
+                <input type="text" id="upi" class="form-control" formControlName="upi">
+              </div>
+             
+            </div>
+            
             <div class="mb-3">
               <label for="totalAmount" class="form-label">Total Amount</label>
               <input type="text" id="totalAmount" class="form-control" formControlName="totalAmount" readonly>
