--- a/src/app/modal/modal.component.html
+++ b/src/app/modal/modal.component.html
@@ -306,6 +306,7 @@
             <div class="invoice-footer">
               Thank you for your booking!
             </div>
+            <button class="btn btn-success mt-3" (click)="downloadInvoicePDF()">Download Invoice</button>
           </div>
         <button type="button" class="btn btn-secondary" (click)="resetForms()">Close</button>
       </div>
