--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -105,59 +105,31 @@ h4{
   text-align: center;
   vertical-align: middle;
   border: 1px solid #EAEAEA;
-  overflow: hidden; /* Hide overflow */
+  overflow: visible; /* Hide overflow */
 }
 
 .cell span {
   position: absolute;
-  top: 0; /* Align to the top of the cell */
-  left: 0; /* Start from the left of the cell */
+  top: 50%; /* Align to the top of the cell */
+  left: 50%; /* Start from the left of the cell */
+  transform: translate(-50%, -50%);
   width: 100%; /* Span the full width of the reservation cells */
-  height: 100%; /* Span the full height of the reservation cells */
+  /* height: 100%; */
   white-space: nowrap; /* Prevent text wrapping */
   overflow: hidden; /* Hide overflow */
   text-overflow: ellipsis; /* Show ellipsis for overflow */
   display: block; /* Ensure it behaves like a block element within the cell */
 }
 
-
 .cell.reserved {
   position: relative;
   background-color: rgb(90, 90, 207);
   color: white;
   border: none;
-  border-top: #333;
+  border-top: 1px solid white;
+  border-bottom:1px solid white;
 }
 
-
-/* .middle-of-reservation::before,
-.start-of-reservation::before,
-.end-of-reservation::before
-{
-  position: relative;
-  top: 2rem;
-  bottom: 2rem;
-  color: white;
-    display: flex;
-    align-items: center;
-    justify-content: center;
-    background-color: rgb(90, 90, 207);
-    border: none;
-} */
-
-/* .start-of-reservation {
-  background-color: rgb(90, 90, 207);
-  border-radius: 5px 0 0 5px;
-}
-
-.middle-of-reservation {
-  background-color: rgb(90, 90, 207);
-}
-
-.end-of-reservation {
-  background-color: rgb(90, 90, 207);
-  border-radius: 0 5px 5px 0;
-} */
 
 .selected {
   border: 2px solid #7aec1c; 
@@ -234,4 +206,7 @@ h4{
   height: 100%;
   writing-mode: vertical-lr;
 } */
+
+
+
 
