--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -2,16 +2,22 @@ body {
   font-family: Arial, sans-serif;
 }
 
+.container-fluid {
+  width: 100%;
+  padding: 20px;
+}
+
 .chart-container {
   overflow-x: auto;
   margin: 20px 0;
-  width: 100%;
+  white-space: nowrap; 
 }
 
 .chart {
   display: grid;
   /* grid-template-columns: repeat(32, 1fr);  */
   background-color: #dee2e6;
+  width: max-content;
 }
 
 .room-name {
