--- a/src/app/room-availability-gantt/room-availability-gantt.component.css
+++ b/src/app/room-availability-gantt/room-availability-gantt.component.css
@@ -50,6 +50,29 @@ body {
   font-weight: bold;
 }
 
+.month-header {
+  font-weight: bold;
+  text-align: center;
+  background-color: #f1f1f1;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #FEFEFE;
+}
+
+.month-name {
+  font-weight: bold;
+  background-color: #f1f1f1;
+  height: 50px;
+  display: flex;
+  align-items: center;
+  justify-content: center;
+  border: 1px solid #FEFEFE;
+  font-size: 16px;
+}
+
+
 /* .available {
   background-color: #d4edda;
 } */
